--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 # mongo address
-spring.mongo.host=10.26.29.51
-spring.mongo.port=27017
-spring.mongo.database=test1
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/muyunhao
+#spring.data.mongodb.uri=mongodb://10.26.29.51:27017/muyunhao
